# Virtual_Python_School

./: PullandBuild.sh  PullandRun.sh  README.md  requirements.txt
Back-End/: .gitignore  .pylintrc  README.md  __init__.py  app.py  config.py  lxd_script_run.py  pytest.ini  requirements.txt
Back-End/alembic/: env.py
Back-End/alembic/versions/: 0065c5e90d26_new_changes.py  0b2e035c6960_new_changes.py  21c667b05c4e_new_changes.py  3c66e8c07bca_new_changes.py  46774e8810d4_new_changes.py  (+21 more)
Back-End/app/: __init__.py  actions.py  application.py  config.py  constants.py  main.py  settings.py
Back-End/myvenv/: pyvenv.cfg
Back-End/rust/: Cargo.toml
Back-End/rust/src/: main.rs
Back-End/rust/src/managers/: classroom_manager.rs  connection_manager.rs  mod.rs  payload_handler.rs  user_manager.rs
Back-End/rust/src/models/: assignment.rs  classroom.rs  consts.rs  cursor_position.rs  mod.rs  user.rs  whiteboard.rs
Back-End/tests/: answers_test.py  courses_test.py  lessons_test.py  login_test.py  users_test.py  utils.py
Back-End/user_parser/: __init__.py  userparser.py
Docs/Diagrams/: classDiag.vpd
Front-End/: .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc  README.md  cypress.config.ts  jest.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.d.ts
Front-End/.storybook/: main.js  preview.js  reactIntl.js
Front-End/cypress/: .eslintrc.json
Front-End/i18n/: en.json  pl.json
Front-End/public/: darkMode.js
Front-End/src/: apiClient.ts  constants.ts  hooks.ts  notifications.tsx  store.ts  utils.ts
(+313 files in other folders)
