[package]
edition = "2021"
name = "virtualschool"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1.14"
warp = "0.3.5"
